Fix timezone selection overflow

--- a/clock.css
+++ b/clock.css
@@ -48,3 +48,6 @@ label {
 select {
     width: 200px;
 }
+.overflow {
+    height: 200px;
+}
